--- a/rept4/WebContent/WEB-INF/web.xml
+++ b/rept4/WebContent/WEB-INF/web.xml
@@ -36,12 +36,20 @@
   		<servlet-name>pesquisa</servlet-name>
   		<url-pattern>/pesquisa</url-pattern> <!-- Use this URL -->
   	</servlet-mapping>
-  	  	<servlet>
+  	<servlet>
 		<servlet-name>processamento</servlet-name>
 		<jsp-file>/WEB-INF/jsps/processacriacao.jsp</jsp-file>
 	</servlet>
 	<servlet-mapping>
   		<servlet-name>processamento</servlet-name>
   		<url-pattern>/processamento</url-pattern> <!-- Use this URL -->
+  	</servlet-mapping>
+  	<servlet>
+		<servlet-name>erro</servlet-name>
+		<jsp-file>/WEB-INF/jsps/erro.jsp</jsp-file>
+	</servlet>
+	<servlet-mapping>
+  		<servlet-name>erro</servlet-name>
+  		<url-pattern>/erro</url-pattern> <!-- Use this URL -->
   	</servlet-mapping>
 </web-app>
