--- a/rept4/WebContent/WEB-INF/web.xml
+++ b/rept4/WebContent/WEB-INF/web.xml
@@ -68,4 +68,12 @@
   		<servlet-name>erro</servlet-name>
   		<url-pattern>/erro</url-pattern> <!-- Use this URL -->
   	</servlet-mapping>
+  		<servlet-mapping>
+  		<servlet-name>scrir1</servlet-name>
+  		<url-pattern>/scrir1</url-pattern> <!-- Use this URL -->
+  	</servlet-mapping>
+  	<servlet>
+		<servlet-name>scrir1</servlet-name>
+		<jsp-file>/WEB-INF/js/scriptsr1.js</jsp-file>
+	</servlet>
 </web-app>
